--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>Impact</th>\n",
+       "      <th>Currency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024.02.21 21:00:00</td>\n",
+       "      <td>(United States) FOMC Minutes</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024.02.22 10:00:00</td>\n",
+       "      <td>(Austria) CPI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024.02.22 10:15:00</td>\n",
+       "      <td>(France) HCOB Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024.02.22 10:15:00</td>\n",
+       "      <td>(France) HCOB Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024.02.22 10:30:00</td>\n",
+       "      <td>(Germany) HCOB Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024.02.22 10:30:00</td>\n",
+       "      <td>(Germany) HCOB Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2024.02.22 11:00:00</td>\n",
+       "      <td>(Euro Area) HCOB Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2024.02.22 11:00:00</td>\n",
+       "      <td>(Euro Area) HCOB Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2024.02.22 12:00:00</td>\n",
+       "      <td>(Euro Area) CPI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2024.02.22 15:30:00</td>\n",
+       "      <td>(United States) Continuing Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2024.02.22 15:30:00</td>\n",
+       "      <td>(United States) Initial Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2024.02.22 15:30:00</td>\n",
+       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2024.02.22 16:45:00</td>\n",
+       "      <td>(United States) S&amp;P Global Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2024.02.22 16:45:00</td>\n",
+       "      <td>(United States) S&amp;P Global Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2024.02.22 17:00:00</td>\n",
+       "      <td>(United States) Existing Home Sales MoM</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2024.02.22 17:00:00</td>\n",
+       "      <td>(United States) Existing Home Sales</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2024.02.23 11:00:00</td>\n",
+       "      <td>(Germany) Ifo Business Climate</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Date                                          Event Impact  \\\n",
+       "0   2024.02.21 21:00:00                   (United States) FOMC Minutes   High   \n",
+       "1   2024.02.22 10:00:00                                  (Austria) CPI   High   \n",
+       "2   2024.02.22 10:15:00                (France) HCOB Manufacturing PMI   High   \n",
+       "3   2024.02.22 10:15:00                     (France) HCOB Services PMI   High   \n",
+       "4   2024.02.22 10:30:00                    (Germany) HCOB Services PMI   High   \n",
+       "5   2024.02.22 10:30:00               (Germany) HCOB Manufacturing PMI   High   \n",
+       "6   2024.02.22 11:00:00             (Euro Area) HCOB Manufacturing PMI   High   \n",
+       "7   2024.02.22 11:00:00                  (Euro Area) HCOB Services PMI   High   \n",
+       "8   2024.02.22 12:00:00                                (Euro Area) CPI   High   \n",
+       "9   2024.02.22 15:30:00      (United States) Continuing Jobless Claims   High   \n",
+       "10  2024.02.22 15:30:00         (United States) Initial Jobless Claims   High   \n",
+       "11  2024.02.22 15:30:00  (United States) Jobless Claims 4-week Average   High   \n",
+       "12  2024.02.22 16:45:00   (United States) S&P Global Manufacturing PMI   High   \n",
+       "13  2024.02.22 16:45:00        (United States) S&P Global Services PMI   High   \n",
+       "14  2024.02.22 17:00:00        (United States) Existing Home Sales MoM   High   \n",
+       "15  2024.02.22 17:00:00            (United States) Existing Home Sales   High   \n",
+       "16  2024.02.23 11:00:00                 (Germany) Ifo Business Climate   High   \n",
+       "\n",
+       "   Currency  \n",
+       "0       USD  \n",
+       "1       EUR  \n",
+       "2       EUR  \n",
+       "3       EUR  \n",
+       "4       EUR  \n",
+       "5       EUR  \n",
+       "6       EUR  \n",
+       "7       EUR  \n",
+       "8       EUR  \n",
+       "9       USD  \n",
+       "10      USD  \n",
+       "11      USD  \n",
+       "12      USD  \n",
+       "13      USD  \n",
+       "14      USD  \n",
+       "15      USD  \n",
+       "16      EUR  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# convert the date to datetime from format \"YYYY, February 01, 00:00\"\n",
     "df['Date'] = pd.to_datetime(df['Date'], format='%Y, %B %d, %H:%M')\n",
@@ -43,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
