edited profit for msolutions

--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -318,19 +318,23 @@
     "    profit_df['entry_time'] = pd.to_datetime(profit_df['entry_time'])\n",
     "    profit_df_new_index = profit_df.set_index('entry_time')\n",
     "    # find the sum of the nova and msolutions profit for each day\n",
-    "    profit_df_daily = profit_df_new_index.resample('D').agg({'nova_profit': 'sum'})\n",
+    "    # profit_df_daily = profit_df_new_index.resample('D').agg({'nova_profit': 'sum'})\n",
+    "    profit_df_daily = profit_df_new_index.resample('D').agg({'msolutions_profit': 'sum'})\n",
     "    # drop the weekends by first adding in a new day of the week column\n",
     "    profit_df_daily['day_of_week'] = profit_df_daily.index.day_name()\n",
     "    # drop any day that is Saturday or Sunday\n",
     "    profit_df_daily = profit_df_daily.loc[(profit_df_daily['day_of_week'] != 'Saturday') & (profit_df_daily['day_of_week'] != 'Sunday')]\n",
     "    # find the number of times that profit_df_daily is below zero\n",
-    "    profit_df_daily['nova_negative'] = np.where(profit_df_daily['nova_profit'] < 0, 1, 0)\n",
+    "    # profit_df_daily['nova_negative'] = np.where(profit_df_daily['nova_profit'] < 0, 1, 0)\n",
+    "    profit_df_daily['msolutions_negative'] = np.where(profit_df_daily['msolutions_profit'] < 0, 1, 0)\n",
     "    # find the sum of nova_negative and msolutions_negative\n",
-    "    nova_negative_sum = profit_df_daily['nova_negative'].sum()\n",
+    "    # nova_negative_sum = profit_df_daily['nova_negative'].sum()\n",
+    "    msolutions_negative_sum = profit_df_daily['msolutions_negative'].sum()\n",
     "    # find the sum of nova_profit\n",
-    "    nova_profit_sum = profit_df['nova_profit'].sum()\n",
+    "    # nova_profit_sum = profit_df['nova_profit'].sum()\n",
+    "    msolutions_profit_sum = profit_df['msolutions_profit'].sum()\n",
     "\n",
-    "    return nova_profit_sum, nova_negative_sum"
+    "    return msolutions_profit_sum, msolutions_negative_sum # nova_profit_sum, nova_negative_sum"
    ]
   },
   {
