added functionality for if take_profit or stop_loss is hit

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -1463,24 +1463,27 @@
    "outputs": [],
    "source": [
     "def add_entry_signal(df, psar, impulse):\n",
+    "    # initialize the df['entry_signal'] column to 'none' if it doesn't exist\n",
+    "    if 'entry_signal' not in df.columns:\n",
+    "        df['entry_signal'] = 'none'\n",
     "    if psar & impulse:\n",
-    "         df['entry_signal'] = np.where((df['psar_signal'] == 'buy') & (df['impulse_signal'] == 'buy') & \n",
+    "        df['entry_signal'] = np.where((df['psar_signal'] == 'buy') & (df['impulse_signal'] == 'buy') & \n",
     "                                           (df['brick_color'] == 'green') & (df['day_of_week_transition'] != 1), 'buy', \n",
     "                                        np.where((df['psar_signal'] == 'sell') & (df['impulse_signal'] == 'sell') & \n",
-    "                                                 (df['brick_color'] == 'red') & (df['day_of_week_transition'] != 1), 'short', 'none'))\n",
+    "                                                 (df['brick_color'] == 'red') & (df['day_of_week_transition'] != 1), 'short', df['entry_signal']))\n",
     "    if psar & ~impulse:\n",
     "        df['entry_signal'] = np.where((df['psar_signal'] == 'buy') & \n",
     "                                      (df['brick_color'] == 'green') & (df['day_of_week_transition'] != 1), 'buy', \n",
     "                                      np.where((df['psar_signal'] == 'sell') & \n",
-    "                                               (df['brick_color'] == 'red') & (df['day_of_week_transition'] != 1), 'short', 'none'))\n",
+    "                                               (df['brick_color'] == 'red') & (df['day_of_week_transition'] != 1), 'short', df['entry_signal']))\n",
     "    if ~psar & impulse:\n",
     "        df['entry_signal'] = np.where((df['impulse_signal'] == 'buy') & \n",
     "                                      (df['brick_color'] == 'green') & (df['day_of_week_transition'] != 1), 'buy', \n",
     "                                      np.where((df['impulse_signal'] == 'sell') & \n",
-    "                                               (df['brick_color'] == 'red') & (df['day_of_week_transition'] != 1), 'short', 'none'))\n",
+    "                                               (df['brick_color'] == 'red') & (df['day_of_week_transition'] != 1), 'short', df['entry_signal']))\n",
     "    if ~psar & ~impulse:\n",
     "        df['entry_signal'] = np.where((df['brick_color'] == 'green') & (df['day_of_week_transition'] != 1), 'buy', \n",
-    "                                      np.where((df['brick_color'] == 'red') & (df['day_of_week_transition'] != 1), 'short', 'none'))\n",
+    "                                      np.where((df['brick_color'] == 'red') & (df['day_of_week_transition'] != 1), 'short', df['entry_signal']))\n",
     "        \n",
     "    return df"
    ]
@@ -1546,6 +1549,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sl_tp_exits(df):\n",
+    "    changed = 0\n",
+    "    # group by cum_position_count and forward fill the value in the first index of the 'stop_loss' column\n",
+    "    df['stop_loss'] = df.groupby('cum_position_count')['stop_loss'].ffill()\n",
+    "    df['take_profit'] = df.groupby('cum_position_count')['take_profit'].ffill()\n",
+    "\n",
+    "    # determine whether the exit should be sooner because the stop_loss was hit before the exit signal (look at the high/low of the brick)\n",
+    "    df['exit_stop_loss'] = np.where((df['entry_signal'] == 'buy') & (df['stop_loss'] > df['low']), 1,\n",
+    "                                            np.where((df['entry_signal'] == 'short') & (df['stop_loss'] < df['high']), 1, 0))\n",
+    "    df['exit_take_profit'] = np.where((df['entry_signal'] == 'buy') & (df['take_profit'] < df['high']), 1,\n",
+    "                                            np.where((df['entry_signal'] == 'short') & (df['take_profit'] > df['low']), 1, 0))\n",
+    "    # if there is a 1 in exit_stop_loss or exit_take_profit then set changed to 1\n",
+    "    if (df['exit_stop_loss'] == 1).any() or (df['exit_take_profit'] == 1).any():\n",
+    "        changed = 1\n",
+    "    df['exit_stop_loss'] = df.groupby('cum_position_count')['exit_stop_loss'].ffill()\n",
+    "    df['exit_take_profit'] = df.groupby('cum_position_count')['exit_take_profit'].ffill()\n",
+    "    # if entry signal isn't 'none' and exit_stop_loss or exit_take_profit is 1 then the entry signal should be 'none'\n",
+    "    df['entry_signal'] = np.where(((df['entry_signal'] != 'none') & \n",
+    "                                                ((df['exit_stop_loss'] == 1) | (df['exit_take_profit'] == 1))), \n",
+    "                                                'none', \n",
+    "                                                df['entry_signal'])\n",
+    "    return df, changed"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 199,
    "metadata": {},
    "outputs": [],
@@ -1565,46 +1598,25 @@
     "# add cumulative count columns\n",
     "renko_full_data = cum_count(renko_full_data)\n",
     "\n",
-    "# see if exits should be sooner with stop_loss and take_profit then repeat above steps\n"
+    "# see if exits should be sooner with stop_loss and take_profit then repeat above steps\n",
+    "df_changed = 1\n",
+    "while df_changed == 1:\n",
+    "    renko_full_data, df_changed = sl_tp_exits(renko_full_data)\n",
+    "    # add a column that will be the entry signal for the strategy to be when both impulse_signal and psar_signal are both 'buy' or 'short'\n",
+    "    renko_full_data = add_entry_signal(renko_full_data, True, True)\n",
+    "\n",
+    "    # if there was a change from 'none' to 'buy' or 'short' then that is an entry signal and replace the 'buy' or 'short' with 'entry + buy' or 'entry + short'\n",
+    "    renko_full_data = add_entry_prefix(renko_full_data)\n",
+    "\n",
+    "    # add a stop loss column that will be the entry price +/- the brick size for when the entry signal is 'entry + buy' or 'entry + short'\n",
+    "    renko_full_data = add_tp_sl(renko_full_data, take_profit_size, stop_loss)\n",
+    "\n",
+    "    # if the 'entry_signal' colummn goes from 'entry + short' or 'short' to 'none' then 'none' should be replaced with 'exit' in the entry_signal column\n",
+    "    renko_full_data = add_exit_signal(renko_full_data)\n",
+    "\n",
+    "    # add cumulative count columns\n",
+    "    renko_full_data = cum_count(renko_full_data)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# group by cum_position_count and forward fill the value in the first index of the 'stop_loss' column\n",
-    "renko_full_data['stop_loss'] = renko_full_data.groupby('cum_position_count')['stop_loss'].ffill()\n",
-    "renko_full_data['take_profit'] = renko_full_data.groupby('cum_position_count')['take_profit'].ffill()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# determine whether the exit should be sooner because the stop_loss was hit before the exit signal (look at the high/low of the brick)\n",
-    "renko_full_data['exit_stop_loss'] = np.where((renko_full_data['entry_signal'] == 'buy') & (renko_full_data['stop_loss'] > renko_full_data['low']), 1,\n",
-    "                                        np.where((renko_full_data['entry_signal'] == 'short') & (renko_full_data['stop_loss'] < renko_full_data['high']), 1, 0))\n",
-    "renko_full_data['exit_take_profit'] = np.where((renko_full_data['entry_signal'] == 'buy') & (renko_full_data['take_profit'] < renko_full_data['high']), 1,\n",
-    "                                        np.where((renko_full_data['entry_signal'] == 'short') & (renko_full_data['take_profit'] > renko_full_data['low']), 1, 0))\n",
-    "renko_full_data['exit_stop_loss'] = renko_full_data.groupby('cum_position_count')['exit_stop_loss'].ffill()\n",
-    "renko_full_data['exit_take_profit'] = renko_full_data.groupby('cum_position_count')['exit_take_profit'].ffill()\n",
-    "# if entry signal isn't 'none' and exit_stop_loss or exit_take_profit is 1 then the entry signal should be 'none'\n",
-    "renko_full_data['entry_signal'] = np.where(((renko_full_data['entry_signal'] != 'none') & \n",
-    "                                            ((renko_full_data['exit_stop_loss'] == 1) | (renko_full_data['exit_take_profit'] == 1))), \n",
-    "                                            'none', \n",
-    "                                            renko_full_data['entry_signal'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
