added Tuesday to day_of_week transition column

--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -247,7 +247,8 @@
     "    r_w_impulse['day_of_week'] = r_w_impulse.index.day_name()\n",
     "    # place a 1 in day_of_week_transition, if it is the last bar on Friday and the next bar is Sunday\n",
     "    r_w_impulse['day_of_week_transition'] = np.where((r_w_impulse['day_of_week'] == 'Friday') & \n",
-    "                                                     ((r_w_impulse['day_of_week'].shift(-1) == 'Sunday') | (r_w_impulse['day_of_week'].shift(-1) == 'Monday')), 1, 0)\n",
+    "                                                     ((r_w_impulse['day_of_week'].shift(-1) == 'Sunday') | (r_w_impulse['day_of_week'].shift(-1) == 'Monday') |\n",
+    "                                                      (r_w_impulse['day_of_week'].shift(-1) == 'Tuesday')), 1, 0)\n",
     "\n",
     "    #### entry conditions ####\n",
     "    # add a column that will be the entry signal for the strategy to be when both impulse_signal and psar_signal are both 'buy' or 'sell'\n",
