testing SMI calculations

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -11,6 +11,34 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement pyine (from versions: 1.0.1, 1.1.0, 1.1.1, 1.1.2)\n",
+      "ERROR: No matching distribution found for pyine\n",
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 24.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pyine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -23,6 +51,106 @@
     "from scipy.signal import lfilter\n",
     "import fx # personal functions\n",
     "# import MetaTrader5 as mt5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def pine_ema(src, length):\n",
+    "#     # Ensure src is a pandas Series or DataFrame column\n",
+    "#     if isinstance(src, pd.DataFrame):\n",
+    "#         src = src.iloc[:,  0]  # Assuming the first column for simplicity\n",
+    "#     elif isinstance(src, pd.Series):\n",
+    "#         pass  # src is already in the correct format\n",
+    "#     else:\n",
+    "#         raise ValueError(\"src must be a pandas Series or DataFrame column.\")\n",
+    "    \n",
+    "#     # Initialize the EMA series\n",
+    "#     ema = pd.Series(index=src.index)\n",
+    "    \n",
+    "#     # Calculate the first EMA value\n",
+    "#     ema.iloc[0] = src.iloc[0]\n",
+    "    \n",
+    "#     # Calculate the rest of the EMA values\n",
+    "#     for i in range(1, len(src)):\n",
+    "#         alpha =  2 / (length +  1)\n",
+    "#         if pd.isna(ema.iloc[i-1]):\n",
+    "#             ema.iloc[i] = src.iloc[i]\n",
+    "#         else:\n",
+    "#             ema.iloc[i] = alpha * src.iloc[i] + (1 - alpha) * ema.iloc[i-1]\n",
+    "    \n",
+    "#     return ema\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def emaEma(source, length):\n",
+    "#     # find the ema of source\n",
+    "#     res1 = source.ewm(span=length).mean()\n",
+    "#     res2 = res1.ewm(span=length).mean().values\n",
+    "#     return res2\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[714.28571429]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# highesthigh = 1.07660\n",
+    "# lowestLow = 1.7598\n",
+    "# close = 1.07463\n",
+    "# lengthD = 3\n",
+    "# lengthK = 10\n",
+    "\n",
+    "# highestLowestRange = highesthigh - lowestLow\n",
+    "# relativeRange = close - ((highesthigh + lowestLow) / 2)\n",
+    "\n",
+    "# # place highestLowestRange and relativeRange into a dataframe\n",
+    "# df_hlr = pd.DataFrame({'highestLowestRange': 0.001}, index = range(0, 1))\n",
+    "# df_rr = pd.DataFrame({'relativeRange': 0.00028}, index = range(0, 1))\n",
+    "\n",
+    "# smi = 200 * (emaEma(df_hlr, lengthD) / emaEma(df_rr, lengthD))\n",
+    "# smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.6832]]\n",
+      "[[-0.34215]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(emaEma(df_hlr, lengthD))\n",
+    "# print(emaEma(df_rr, lengthD))"
    ]
   },
   {
