getting the necessary data from the journal

--- a/parsing_journal.ipynb
+++ b/parsing_journal.ipynb
@@ -2,15 +2,395 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>entry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023.10.16 00:00:00  min_impulse_psar EURUSD,M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023.10.16 00:15:00  min_impulse_psar EURUSD,M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023.10.16 00:15:00  min_impulse_psar EURUSD,M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023.10.16 00:15:00  min_impulse_psar EURUSD,M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023.10.16 00:15:00  min_impulse_psar EURUSD,M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11346</th>\n",
+       "      <td>2023.11.09 23:45:00  min_impulse_psar EURUSD,M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11347</th>\n",
+       "      <td>2023.11.09 23:45:00  min_impulse_psar EURUSD,M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11348</th>\n",
+       "      <td>2023.11.09 23:45:00  min_impulse_psar EURUSD,M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11349</th>\n",
+       "      <td>2023.11.09 23:45:00  min_impulse_psar EURUSD,M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11350</th>\n",
+       "      <td>2023.11.09 23:59:47  Tester: order #136 is closed</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11351 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   entry\n",
+       "0      2023.10.16 00:00:00  min_impulse_psar EURUSD,M...\n",
+       "1      2023.10.16 00:15:00  min_impulse_psar EURUSD,M...\n",
+       "2      2023.10.16 00:15:00  min_impulse_psar EURUSD,M...\n",
+       "3      2023.10.16 00:15:00  min_impulse_psar EURUSD,M...\n",
+       "4      2023.10.16 00:15:00  min_impulse_psar EURUSD,M...\n",
+       "...                                                  ...\n",
+       "11346  2023.11.09 23:45:00  min_impulse_psar EURUSD,M...\n",
+       "11347  2023.11.09 23:45:00  min_impulse_psar EURUSD,M...\n",
+       "11348  2023.11.09 23:45:00  min_impulse_psar EURUSD,M...\n",
+       "11349  2023.11.09 23:45:00  min_impulse_psar EURUSD,M...\n",
+       "11350  2023.11.09 23:59:47  Tester: order #136 is closed\n",
+       "\n",
+       "[11351 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import the csv file\n",
+    "df = pd.read_csv('journal_comparison_Oct_backtest.csv', header=0, names=['entry'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>entry</th>\n",
+       "      <th>datetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>New Account Equity at Reset: 100000.0</td>\n",
+       "      <td>2023.10.16 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Entering into OnBar</td>\n",
+       "      <td>2023.10.16 00:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Time: 0</td>\n",
+       "      <td>2023.10.16 00:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>No Trades Allowed</td>\n",
+       "      <td>2023.10.16 00:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>more_trades: false</td>\n",
+       "      <td>2023.10.16 00:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11346</th>\n",
+       "      <td>more_trades: true</td>\n",
+       "      <td>2023.11.09 23:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11347</th>\n",
+       "      <td>SMI: -44.36428143293188</td>\n",
+       "      <td>2023.11.09 23:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11348</th>\n",
+       "      <td>NO TRADE</td>\n",
+       "      <td>2023.11.09 23:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11349</th>\n",
+       "      <td>First Cross: true</td>\n",
+       "      <td>2023.11.09 23:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11350</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023.11.09 23:59:47</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11351 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        entry             datetime\n",
+       "0       New Account Equity at Reset: 100000.0  2023.10.16 00:00:00\n",
+       "1                         Entering into OnBar  2023.10.16 00:15:00\n",
+       "2                                     Time: 0  2023.10.16 00:15:00\n",
+       "3                           No Trades Allowed  2023.10.16 00:15:00\n",
+       "4                          more_trades: false  2023.10.16 00:15:00\n",
+       "...                                       ...                  ...\n",
+       "11346                       more_trades: true  2023.11.09 23:45:00\n",
+       "11347                 SMI: -44.36428143293188  2023.11.09 23:45:00\n",
+       "11348                                NO TRADE  2023.11.09 23:45:00\n",
+       "11349                       First Cross: true  2023.11.09 23:45:00\n",
+       "11350                                     NaN  2023.11.09 23:59:47\n",
+       "\n",
+       "[11351 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pull out the datetime from the string\n",
+    "df['datetime'] = df['entry'].str.extract(r'(\\d{4}.\\d{2}.\\d{2} \\d{2}:\\d{2}:\\d{2})')\n",
+    "# remove the datetime from the string\n",
+    "df['entry'] = df['entry'].str.split('min_impulse_psar EURUSD,M15:').str[1]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>entry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>2023.10.16 12:45</td>\n",
+       "      <td>Closing Buy Ticket: 3 bar rule Ticket #: 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373</th>\n",
+       "      <td>2023.10.16 14:15</td>\n",
+       "      <td>Closing Buy Ticket: PSAR flip Ticket #: 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>443</th>\n",
+       "      <td>2023.10.16 17:30</td>\n",
+       "      <td>Closing Sell Ticket: SMI crossing above -40 T...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>479</th>\n",
+       "      <td>2023.10.16 19</td>\n",
+       "      <td>Closing Buy Ticket: SMI crossing below 40 Tic...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>588</th>\n",
+       "      <td>2023.10.16 23:45</td>\n",
+       "      <td>Closing Buy Ticket: 3 bar rule Ticket #: 5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10591</th>\n",
+       "      <td>2023.11.08 16</td>\n",
+       "      <td>Closing Sell Ticket: SMI crossing above -40 T...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10779</th>\n",
+       "      <td>2023.11.09 00:15</td>\n",
+       "      <td>Closing Buy Ticket: SMI crossing below 40 Tic...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11070</th>\n",
+       "      <td>2023.11.09 10:45</td>\n",
+       "      <td>Closing Sell Ticket: SMI crossing above -40 T...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11150</th>\n",
+       "      <td>2023.11.09 14:30</td>\n",
+       "      <td>Closing Sell Ticket: SMI crossing above -40 T...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11235</th>\n",
+       "      <td>2023.11.09 18:15</td>\n",
+       "      <td>Closing Buy Ticket: SMI crossing below 40 Tic...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>62 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               datetime                                              entry\n",
+       "337    2023.10.16 12:45         Closing Buy Ticket: 3 bar rule Ticket #: 1\n",
+       "373    2023.10.16 14:15          Closing Buy Ticket: PSAR flip Ticket #: 2\n",
+       "443    2023.10.16 17:30   Closing Sell Ticket: SMI crossing above -40 T...\n",
+       "479       2023.10.16 19   Closing Buy Ticket: SMI crossing below 40 Tic...\n",
+       "588    2023.10.16 23:45         Closing Buy Ticket: 3 bar rule Ticket #: 5\n",
+       "...                 ...                                                ...\n",
+       "10591     2023.11.08 16   Closing Sell Ticket: SMI crossing above -40 T...\n",
+       "10779  2023.11.09 00:15   Closing Buy Ticket: SMI crossing below 40 Tic...\n",
+       "11070  2023.11.09 10:45   Closing Sell Ticket: SMI crossing above -40 T...\n",
+       "11150  2023.11.09 14:30   Closing Sell Ticket: SMI crossing above -40 T...\n",
+       "11235  2023.11.09 18:15   Closing Buy Ticket: SMI crossing below 40 Tic...\n",
+       "\n",
+       "[62 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove any rows with NaN\n",
+    "df = df.dropna()\n",
+    "# filter entry to where the beginning of the string includes \"Closing\"\n",
+    "df_closing = df[df['entry'].str.contains('Closing')]\n",
+    "# reverse the order of the datetime and entry columns\n",
+    "df_closing = df_closing.loc[:, ['datetime', 'entry']]\n",
+    "# remove the \":00\" from the datetime\n",
+    "df_closing['datetime'] = df_closing['datetime'].str.replace(':00', '')\n",
+    "df_closing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save df_closing to a csv file\n",
+    "# df_closing.to_csv('journal_comparison_Oct_backtest_closing.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
